--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Node.js Website</title>
+  <title>My Express Website</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Welcome to My Node.js Website!</h1>
-  <p>This is a basic site served by Node.js and Express.</p>
+  <h1>Welcome to My Express Website!</h1>
+  <p>This is a basic site built with Express.</p>
 </body>
 </html>
